[tool.poetry]
name = "repl_python3_ROXXSELFBOTV2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pypresence = "^4.2.0"
aiohttp = "^3.7.4"
colorama = "^0.4.4"
discord = "^1.7.3"
Flask = "^2.0.1"
colored = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
